--- a/talks/functional-exception-handling/geecon/index.html
+++ b/talks/functional-exception-handling/geecon/index.html
@@ -190,6 +190,10 @@
         </section>
 
         <section>
+            <img src="img/no_tweet.png" width="1000"/>
+        </section>
+
+        <section>
             <h2>Compile-time checks -> shorter feedback cycles</h2>
             <img src="img/agile.png" width="1000"/>
             <div>
@@ -197,6 +201,10 @@
                     <a href="http://scrumreferencecard.com/scrum-reference-card/​">Scrum Reference Card</a>
                 </small>
             </div>
+        </section>
+
+        <section>
+            <img src="img/no_compile_no_problem.png" width="1000" class="fragment"/>
         </section>
 
         <section>
@@ -241,6 +249,7 @@
         <section>
             <h2><a href="http://www.vavr.io">vavr-io</a></h2>
             <h2><a href="https://github.com/aol/cyclops-react">cyclops-react</a></h2>
+            <h2><a href="https://arrow-kt.io">arrow (Kotlin)</a></h2>
         </section>
 
         <section>
