--- a/talks/functional-exception-handling/geecon/index.html
+++ b/talks/functional-exception-handling/geecon/index.html
@@ -321,14 +321,14 @@
 
         <section>
             <pre><code data-trim="">
-                Try&lt;InputStream> javaday = getSingleSearchResults("javaday")
+                Try&lt;InputStream> geecon = getSingleSearchResults("geecon")
                   .flatMap(url -> Try.of(url::openStream))
             </code></pre>
         </section>
 
         <section>
             <pre><code data-trim="">
-                Match(javaday).of(
+                Match(result).of(
                   Case($Success($()), "Opened successfully"),
                   Case($Failure($()), "Failed :(")
                 );
