--- a/talks/functional-exception-handling/geecon/index.html
+++ b/talks/functional-exception-handling/geecon/index.html
@@ -333,6 +333,7 @@
                   Case($Failure($()), "Failed :(")
                 );
             </code></pre>
+            <a href="http://openjdk.java.net/jeps/305" class="fragment">http://openjdk.java.net/jeps/305</a>
         </section>
 
         <section>
