--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,13 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
+        <td>52.</td>
+        <td data-location="50.070264, 20.036788" data-place="NCK Cracow">JDD 2018</td>
+        <td><a href="https://jdd.org.pl">???</a></td>
+        <td>8.10.2018</td>
+        <td>Cracow/Poland</td>
+    </tr>
+    <tr>
         <td>51.</td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL</td>
         <td><a href="http://devoxx.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
