--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -94,6 +94,7 @@
     <img src="img/66.png" width="800"/>
     <img src="img/67.png" width="800"/>
     <img src="img/68.png" width="800"/>
+    <img src="img/69.png" width="800"/>
 </div>
 
 </body>
