--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -63,14 +63,16 @@
             <h1>The Dark Side of Java 8</h1>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h2><a href="http://twitter.com/pivovarit">@pivovarit</a></h2>
+            <br><br>
+            <h2><a href="http://4comprehension.com/">4comprehension.com</a></h2>
         </section>
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
-            <h2>System Engineer @ <a href="https://www.casumocareers.com">Casumo</a></h2>
+            <h2>System Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
 	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
-            <h2><a href="https://github.com/pivovarit">OS Contributor</a></h2>
-            <h2><a href="https://dzone.com/users/3083610/pivovarit.html">DZone MVB</a></h2>
+            <h3><a href="https://github.com/pivovarit">OS Contributor</a>, <a href="https://dzone.com/users/3083610/pivovarit.html">DZone MVB</a></h3>
+            <h3></h3>
         </section>
 
         <section>
@@ -80,7 +82,7 @@
             <h2>...</h2>
         </section>
 
-
+        <section data-background="img/vader.jpg"></section>
 
         <section>
             <h2>Key takeaways</h2>
