--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -96,6 +96,7 @@
                 <li>Parallel Streams not that parallel as you might think</li>
                 <li>Streams and eager flatmap</li>
                 <li>Streams and eager flatmap vs takeUntil/takeWhile</li>
+                <li>Streams API and autoclosing</li>
                 <li>CompletableFuture API design (allOf/anyOf)</li>
                 <li>...</li>
             </ul>
