--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -128,7 +128,7 @@
         <section data-background="img/vader.jpg"></section>
 
         <section>
-            <h1>Type Pollution</h1>
+            <h1>#1 Type Pollution</h1>
         </section>
 
         <section>
@@ -153,18 +153,22 @@
         </section>
 
         <section>
-            <h3>What about BytePredicate, DoubleToByteFunction, BiCharConsumer, and so on...?</h3>
-            <blockquote>Each specialization is projected to ~100K to the JRE footprint</blockquote>
+            <h4>What about BytePredicate, DoubleToByteFunction, BiCharConsumer, and so on...?</h4>
+            <blockquote class="fragment">Each specialization is projected to ~100K to the JRE footprint</blockquote>
         </section>
 
         <section>
-            <h1>Project Valhalla</h1>
+            <h1>Project Valhalla:</h1>
+            <h3><a href="http://openjdk.java.net/jeps/169">JEP 169: Value Objects</a></h3>
+            <blockquote>Provide JVM infrastructure for working with immutable and reference-free objects, in support of efficient by-value computation with non-primitive types.</blockquote>
             <h3><a href="http://openjdk.java.net/jeps/218">JEP 218: Generics over Primitive Types</a></h3>
             <blockquote>Extend generic types to support the specialization of generic classes and interfaces over primitive types.</blockquote>
         </section>
 
+        <section></section>
+
         <section>
-            <h1>Conditional Stream termination</h1>
+            <h1>#2 Conditional Stream Termination</h1>
         </section>
 
         <section>
