--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -172,17 +172,20 @@
         </section>
 
         <section>
-            <h1>Lambda expressions and checked exceptions</h1>
+            <h1>#3 Stream API and eager Stream#flatMap()</h1>
         </section>
 
         <section>
-            <h1>Lack of common APIs (add one element to stream, zip streams)</h1>
+            <h1>#4 Stream#takeWhile/takeUntil @JDK9</h1>
         </section>
 
         <section>
-            <h1>Parallel Streams and a shared thread-pool</h1>
+            <h1>#5 Lambda expressions vs. Checked Exceptions</h1>
         </section>
 
+        <section>
+            <h1>#6 Parallel Streams</h1>
+        </section>
 
         <section>
             <img src="img/parallel-all-the-things.png"/>
@@ -201,19 +204,12 @@
         </section>
 
         <section>
-            <h1>Streams and eager flatmap</h1>
+            <h1>#7 CompletableFuture API design (allOf/anyOf)</h1>
         </section>
 
-        <section>
-            <h1>Streams and eager flatmap vs takeUntil/takeWhile</h1>
-        </section>
 
         <section>
-            <h1>Streams being once-off and resource management</h1>
-        </section>
-
-        <section>
-            <h1>CompletableFuture API design (allOf/anyOf)</h1>
+            <h1>#8 Lack of common APIs (add one element to stream, zip streams)</h1>
         </section>
 
         <section>
