--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -232,11 +232,105 @@
         </section>
 
         <section>
-            <h1>#3 Stream API and eager Stream#flatMap()</h1>
+            <h1>#3 Stream#flatMap()</h1>
         </section>
 
         <section>
-            <h1>#4 Stream#takeWhile/takeUntil @JDK9</h1>
+            <h1>Streams ~ Lazy Sequences</h1>
+            <h3 class="fragment">As performant as imperative equivalents (time complexity) </h3>
+            <h3 class="fragment">In theory.</h3>
+        </section>
+
+        <section>
+            <pre><code data-trim="">
+                List&lt;String> addresses = new ArrayList<>();
+                for (User u : getUsers()) {
+                    for (String address : u.getAddresses()) {
+                        if (address.contains("foo")) {
+                            return address; // short-circuts the ongoing iteration
+                        }
+                    }
+                }
+            </code></pre>
+        </section>
+
+        <section>
+            <pre><code data-trim="">
+                return getUsers().stream()
+                  .flatMap(u -> u.getAddresses().stream())
+                  .filter(address -> address.contains("foo"))
+                  .findAny()
+            </code></pre>
+        </section>
+
+        <section>
+            <h2>Not so true in practice</h2>
+        </section>
+
+        <section>
+            <pre><code data-trim="">
+                static List&lt;User> getUsers() { // db fetch stub
+                    return List.of(new User(List.of("a1","a2","a3","a4","a5")));
+                 }
+            </code></pre>
+            <h2>Task: take a first encountered address of a first encountered user</h2>
+        </section>
+
+        <section>
+            <pre><code data-trim="">
+                getUsers().stream()
+                  .flatMap(u -> u.getAddresses().stream())
+                  .findAny();
+            </code></pre>
+        </section>
+
+         <section>
+            <pre><code data-trim="">
+                getUsers().stream()
+                  .flatMap(u -> u.getAddresses().stream())
+                  .peek(System.out::println)
+                  .findAny();
+            </code></pre>
+        </section>
+
+        <section>
+            <pre><code data-trim="">
+                a1
+                a2
+                a3
+                a4
+                a5
+            </code></pre>
+            <h4><a href="https://bugs.openjdk.java.net/browse/JDK-8075939">https://bugs.openjdk.java.net/browse/JDK-8075939</a></h4>
+        </section>
+
+        <section>
+            <pre><code data-trim="">
+                getUsers().stream()
+                  .flatMap(u -> getAllAddresses(u).stream()) // large/infinite stream
+                  .peek(System.out::println)
+                  .findAny();
+            </code></pre>
+            <img src="img/eager-flatmap-heap.png" class="fragment"/>
+        </section>
+
+        <section>
+            <h2>The cause</h2>
+            <img src="img/flatmap-impl.png" class="fragment"/>
+        </section>
+
+        <section>
+            <img src="img/flatmap-impl-focused.png"/>
+        </section>
+
+        <section>
+            <h2>Solution: migrate to JDK10+</h2>
+            <h4><a href="http://hg.openjdk.java.net/jdk/jdk10/rev/fca88bbbafb9">http://hg.openjdk.java.net/jdk/jdk10/rev/fca88bbbafb9</a></h4>
+            <h2>JDK-8 Solution: don't use Stream API if you need nested collections to be evaluated lazily</h2>
+        </section>
+
+        <section>
+            <h1>#4 Stream#takeWhile/dropUntil @JDK9</h1>
         </section>
 
         <section>
