--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -302,6 +302,7 @@
                 a5
             </code></pre>
             <h4><a href="https://bugs.openjdk.java.net/browse/JDK-8075939">https://bugs.openjdk.java.net/browse/JDK-8075939</a></h4>
+            <h4><a href="https://bugs.openjdk.java.net/browse/JDK-8189234">https://bugs.openjdk.java.net/browse/JDK-8189234</a></h4>
         </section>
 
         <section>
