--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -442,8 +442,7 @@
         </section>
 
         <section>
-            https://stackoverflow.com/questions/47888814/takewhile-working-differently-with-flatmap/47890166#47890166
-            https://bugs.openjdk.java.net/browse/JDK-8193856
+            <h2>Solution: migrate to JDK10+</h2>
         </section>
 
         <section>
@@ -501,12 +500,11 @@
 <script src="js/reveal.js"></script>
 
 <script>
-
     // More info https://github.com/hakimel/reveal.js#configuration
     Reveal.initialize({
         controls: false,
-        defaultTiming: 60,
-        progress: false,
+        defaultTiming: 45,
+        progress: true,
         history: true,
         center: true,
         width: 1920,
